<resources>
    <string name="app_name">VeryCycleUser</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="ok">OK</string>
    <string name="no">NO</string>
    <string name="connectfacebook">Connect With Facebook</string>
    <string name="FACEBOOK_APP_ID">693486887993189</string>
    <string name="facebook_app_id">693486887993189</string>
    <string name="fb_login_protocol_scheme">fb693486887993189</string>
    <string name="home_medical_service">Home Medical Service</string>
    <string name="enter_email">Enter your email address</string>
    <string name="genereate_otp">Generate OTP</string>
    <string name="login_text">Login</string>
    <string name="email_mobile_text">Email or Mobile</string>
    <string name="pass_text">Password</string>
    <string name="re_me">Remember me</string>
    <string name="forgot_pw">forgot the password ?</string>
    <string name="quikaccess">Or  Quick  Access  With</string>
    <string name="fb">Facebook</string>
    <string name="google">Google</string>
    <string name="craete_new_ac">Create a New Account</string>
    <string name="search"> Enter Your Address </string>
    <string name="done"> Done </string>
    <string name="name"> Name </string>
    <string name="success"> Login SuccessFull </string>
    <string name="success_re"> Register SuccessFull</string>
    <string name="at_home"> at Home</string>
    <string name="phon_no"> Phone No </string>
    <string name="pw"> Password </string>
    <string name="whatsup">  Whatsup Number </string>
    <string name="address"> Address </string>
    <string name="email"> Email </string>
    <string name="register_now"> Register Now </string>
    <string name="click_appoinment"> Click for Appointment </string>
    <string name="book_appoinment"> Booking Appoinment For </string>
    <string name="address_from_map"> You Want Take Location From Map </string>
    <string name="address_from_enter"> Enter Location By Hand </string>
    <string name="go"> Go </string>
    <string name="not_avaliable"> Discription not available...</string>
    <string name="book_apoinmnet">Book Appoinment Successfully </string>
    <string name="self"> SELF </string>
    <string name="other"> Other </string>
    <string name="wait"> please wait... </string>
    <string name="enter_mobile"> Enter Mobile Number </string>
    <string name="okk"> OK </string>
    <string name="call_us">Call Us</string>
    <string name="home">Home</string>
    <string name="fav">Favourite</string>
    <string name="account">Account</string>
    <string name="explore">Explore</string>
    <string name="about">    About</string>
    <string name="athome">    At Home</string>
    <string name="appoinment_form1"> Appointment Form</string>
    <string name="verify">      Verify   </string>
    <string name="service">      Service   </string>
    <string name="xray_athome">      X-ray at home   </string>
    <string name="about_xray">     About X-RAY   </string>
    <string name="xrayappoinmnet">    X-RAY Appointment   </string>
    <string name="digital_xray">   Digital x-ray at home  </string>
    <string name="digital_xray1">Digital x-ray</string>
    <string name="ultrasound">  Ultrasound at Home  </string>
    <string name="ultrasound1">Ultrasound</string>
    <string name="sonar">  Sonar</string>
    <string name="echo_at_home">  Echo at home  </string>
    <string name="doppler"> Doppler at home  </string>
    <string name="doppler1"> Doppler</string>
    <string name="ecg"> ECG at home  </string>
    <string name="ecg1">ECG</string>
    <string name="eeg"> EEG at home  </string>
    <string name="eeg1"> EEG </string>
    <string name="home_medical">  Home Medical Services  </string>
    <string name="logout">Logout</string>
    <string name="submit">Submit</string>
    <string name="update_now">Update Now</string>
    <string name="corporate_medical">  Corporate medical test  </string>
    <string name="permission_required">Permission Required</string>
    <string name="required_service">Required Service</string>
    <string name="echo_elec">Echo and Electrocardiography</string>
    <string name="exit">Exit Application ?</string>
    <string name="exit_click">Click yes to exit !</string>
    <string name="yes">Yes</string>
    <string name="no1">No</string>
    <string name="text_about"> Doctor care. A doctor may visit a patient at home to diagnose and treat the illness(es). He or she may also periodically review the home health care needs.
</string>
    <string name="text_about2"> Nursing care. The most common form of home health care is some type of nursing care depending on the person needs. In consultation with the doctor, a registered nurse will set up a plan of care. Nursing care may include wound dressing, ostomy care, intravenous therapy, administering medication, monitoring the general health of the patient, pain control, and other health support..</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="network_failure">Sorry! Not connected to internet</string>
    <string name="please_wait">Please wait...</string>
    <string name="please_enter_email">Please enter email.</string>
    <string name="wrong_email">Can\'t enter worng email.</string>
    <string name="please_enter_pass">Please enter password.</string>
    <string name="thank_you_for_signing_up">Thank you for signing up!</string>
    <string name="sign_in_successful">Login successful!</string>
    <string name="f_name">Name</string>
    <string name="lname">Last Name</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="select_image_from">Select image from</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="profile">Profile</string>
    <string name="helpand_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Signout</string>
    <string name="my_history">My History</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="contact_us">Contact us</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgotpasswordtext">Please, enter your email address. You will
       <br /> receive a link to create a new password via <br /> email. </string>
    <string name="send">Send</string>
    <string name="hello">Hello</string>
    <string name="my_profile">My Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="please_enter_mobile_number">Please enter mobile number.</string>
    <string name="choosing_the_type_of_ride">Choosing the type of ride</string>
    <string name="next">Next</string>
    <string name="upload_cycle_image">Upload Cycle Image</string>
    <string name="exact_model">Exact model</string>
    <string name="please_select_cycle_model">Please select cycle model</string>
    <string name="please_upload_cycle_image">Please upload cycle image</string>
    <string name="choosing_the_type_of_repair">Choosing the type of repair</string>
    <string name="upload_repair_image">Upload Repair Image</string>
    <string name="continue_">Continue</string>
    <string name="my_eBike_has_broken_down">My eBike has broken down</string>
    <string name="i_have_a_brake_problem">I have a brake problem</string>
    <string name="my_tire_is_flat">My tire is flat</string>
    <string name="my_speeds_go_wrong">My speeds go wrong</string>
    <string name="what_is_the_problem_with_your_bike">What is the problem with your bike?</string>
    <string name="please_select_problem">Please select problem</string>
    <string name="choose_possible_repair_time_or_address">Choose repair time or address</string>
    <string name="pick_at_least_ten_spread_over_three_days">( Pick at least 5 spread over 3 days )</string>
    <string name="select_date">Selecr Date</string>
    <string name="select_time">Select Time</string>
    <string name="select_address">Select Address</string>
    <string name="place_api_key">AIzaSyC4Eg_qGdkZrcW-td6QsmJAk2g4nzPaat0</string>
    <string name="send_request">Send Request</string>
    <string name="available_provider">Available Provider</string>
    <string name="please_select_date">Please select date</string>
    <string name="please_select_time">Please select time</string>
    <string name="please_select_address">Please select address</string>
    <string name="provider_not_available">Provider not available</string>
    <string name="please_select_provider">Please select provider</string>
    <string name="request_send_successfully">Request send successfully</string>
    <string name="new_booking_request">New Booking Request</string>
    <string name="please_upload_repair_image">Please upload repair image</string>
    <string name="accept">Accept</string>
    <string name="request">Request</string>
    <string name="accept_booking">Accept Booking</string>
    <string name="no_booking_available">No booking available</string>
    <string name="google_maps_key">AIzaSyAXTJrvnDTC8AjYzK2dPatsSAMJaTIc-c0</string>
    <string name="rate">Rate</string>
    <string name="msg">Massege</string>
    <string name="provider_arrived">Provider Arrived</string>
    <string name="you_will_be_automatically_billed_for_the_wait_beyond_4_minuts">You will be automatically billed for the wait beyond 4 minuts</string>
    <string name="your_service_has_begin">Your service has begin</string>
    <string name="service_start">Service start</string>
    <string name="service_end">Service end</string>
    <string name="your_service_is_finished">Your service is finished</string>
    <string name="type_msg">Type Massege</string>
    <string name="track">Track</string>
    <string name="new_chat_msg_provider">New chat from provider</string>
    <string name="booking_accept_by_provider">Booking Accept by provider</string>
    <string name="provider_arrived_service_location">Provider Arrived service location</string>
    <string name="provider_start_the_service">Povider start the service</string>
    <string name="provider_finish_service">Provider finish service</string>
    <string name="payment">Payment</string>
    <string name="complete_service">Complete Service</string>
    <string name="collect_payment">Collect payment</string>
    <string name="total_amount">Total amount</string>
    <string name="details">Details</string>
    <string name="service_date">Service date</string>
    <string name="service_amount">Service amount</string>
    <string name="pay">Pay</string>
    <string name="repair_extra_amount">Repair extra amount</string>
    <string name="booking_cancel_by_provider">Your booking cancel by provider</string>
    <string name="payment_successfully_done">Payment successfully done</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="no_data_available">Data not available</string>
    <string name="flat_tire">Flat tire</string>
    <string name="breaking_lock">Breaking a lock</string>
    <string name="urgent_repair">Urgent repair</string>
    <string name="please_select_repair_service">Please select repair service</string>
    <string name="whole_morning">Whole morning</string>
    <string name="all_afternoon">All afternoon</string>
    <string name="add_only_5_time_slot">Add only 10 time slots</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="invoice">Invoice</string>
    <string name="unblock">Unblock account</string>
    <string name="privacy_information">Privacy information</string>
</resources>