<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F1EDED"
        tools:context=".Problam">

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_bg_black"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="-10dp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_previous" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:orientation="vertical"

                >


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"

                    android:layout_weight="1"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/choose_possible_repair_time_or_address"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp"
                    tools:ignore="RtlCompat" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_at_least_ten_spread_over_three_days"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />


            </LinearLayout>


        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_98sdp"
            android:layout_marginRight="@dimen/_35sdp"
            android:elevation="@dimen/_10sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="0dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/_2sdp"
                android:orientation="vertical"
                android:padding="@dimen/_18sdp">


                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsmedium"
                    android:gravity="center_vertical"
                    android:padding="@dimen/_8sdp"
                    android:singleLine="true"
                    android:text="@string/select_date"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/grey" />

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppinsmedium"
                    android:gravity="center_vertical"
                    android:padding="@dimen/_8sdp"
                    android:singleLine="true"
                    android:text="@string/select_time"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/grey" />


                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppinsmedium"
                    android:gravity="center_vertical"
                    android:padding="@dimen/_8sdp"
                    android:singleLine="true"
                    android:text="@string/select_address"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/grey" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_view"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/btn_bg"
            android:elevation="@dimen/_5sdp"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppinsmedium"
                android:gravity="center_horizontal"
                android:text="@string/continue_"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold">

            </TextView>

        </LinearLayout>


    </RelativeLayout>
</layout>