<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/linearHeader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:background="@drawable/rectangle_bg_black"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_15sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_previous" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/available_provider"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                tools:ignore="RtlCompat" />

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProvider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnBooking"
            android:layout_below="@+id/linearHeader"
            android:layout_margin="@dimen/_10sdp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_provider_list" />


        <TextView
            android:id="@+id/tvNotFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppinsmedium"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:text="@string/provider_not_available"
            android:visibility="gone"/>





        <LinearLayout
            android:id="@+id/btnBooking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/yellow_color"
            android:elevation="@dimen/_5sdp"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppinsmedium"
                android:gravity="center_horizontal"
                android:text="@string/send_request"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold">

            </TextView>

        </LinearLayout>

    </RelativeLayout>
</layout>