<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_15sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_previous" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_weight="1"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/urgent_repair"
                android:textColor="#fff"
                android:textSize="@dimen/_15sdp" />


        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear1"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/llCheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_28sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/chkFlatTire"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/flat_tire"
                        android:textSize="@dimen/_13sdp"
                        android:padding="@dimen/_5sdp"
                        />


                    <CheckBox
                        android:id="@+id/chkBreaking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/breaking_lock"
                        android:textSize="@dimen/_13sdp"
                        android:padding="@dimen/_5sdp"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/llCheckBox"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_32sdp"
                        android:fontFamily="@font/poppinsmedium"
                        android:text="@string/exact_model"
                        android:textColor="@color/black" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginLeft="@dimen/_35sdp"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:layout_marginRight="@dimen/_35sdp"
                        app:cardCornerRadius="@dimen/_2sdp"
                        app:cardElevation="@dimen/_5sdp">

                        <Spinner
                            android:id="@+id/spinnerModel"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:spinnerMode="dropdown" />

                    </androidx.cardview.widget.CardView>


                    <RelativeLayout
                        android:id="@+id/linerCycle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_160sdp"
                        android:layout_marginLeft="@dimen/_35sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_35sdp"
                        android:background="@color/grey_one_color"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ivCamera"
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_alignParentRight="true"
                            android:layout_gravity="end"
                            android:layout_marginTop="@dimen/_35sdp"
                            android:layout_marginRight="@dimen/_30sdp"
                            android:src="@drawable/camera" />

                        <ImageView
                            android:id="@+id/ivDemo"
                            android:layout_width="wrap_content"

                            android:layout_height="wrap_content"
                            android:layout_below="@+id/ivCamera"
                            android:layout_centerInParent="true"
                            android:src="@drawable/cycle_img" />

                        <ImageView
                            android:id="@+id/ivCycle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY" />


                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_35sdp"
                        android:layout_marginRight="@dimen/_35sdp"
                        android:background="@color/grey_two_color">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppinsmedium"
                            android:padding="@dimen/_8sdp"
                            android:text="@string/upload_cycle_image"
                            android:textAlignment="center"
                            android:textColor="@color/white" />


                    </LinearLayout>


                </LinearLayout>


                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_28sdp"
                    android:fontFamily="@font/poppinsmedium"
                    android:layout_marginRight="@dimen/_28sdp"
                    android:gravity="center_vertical"
                    android:padding="@dimen/_8sdp"
                    android:maxLines="2"
                    android:text="@string/select_address"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/grey"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_30sdp"/>




                <LinearLayout
                    android:id="@+id/btnContinue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/card_view"
                    android:layout_marginLeft="@dimen/_28sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:layout_marginRight="@dimen/_28sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:background="@drawable/btn_bg"
                    android:elevation="@dimen/_5sdp"
                    android:orientation="horizontal"
                    android:padding="@dimen/_10sdp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppinsmedium"
                        android:gravity="center_horizontal"
                        android:text="@string/continue_"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold">

                    </TextView>

                </LinearLayout>


            </LinearLayout>

        </ScrollView>

    </RelativeLayout>
</layout>